# Linux-XMC-Development

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
adc/: Makefile.am  aclocal.m4
adc/src/: ADC_XMC4500.c
adc/src/include/: ADC_XMC4500.h
ethernet/: Makefile.am
ethernet/src/: linker_script.ld  main_old.c
ethernet/src/email/: README.txt  linker_script.ld  main.c  solver.bak
ethernet/src/email/Dave/: .dconfig
ethernet/src/email/Dave/Model/: ModelConfigData.data  ProjDiagram.dep  RestoreDB.data  hw_ProjDiagram.dep
ethernet/src/email/Dave/Model/APPS/CLOCK_XMC4/v4_0_22/: CLOCK_XMC4_0.app
ethernet/src/email/Dave/Model/APPS/CPU_CTRL_XMC4/v4_0_12/: CPU_CTRL_XMC4_0.app
ethernet/src/email/Dave/Model/APPS/CPU_CTRL_XMC4/v4_0_12/Templates/: cpu_ctrl_xmc4.h  cpu_ctrl_xmc4_externh.tmpl
ethernet/src/email/Dave/Model/APPS/DIGITAL_IO/v4_0_16/: DIGITAL_IO_0.app  DIGITAL_IO_1.app  DIGITAL_IO_2.app  DIGITAL_IO_3.app  DIGITAL_IO_4.app  DIGITAL_IO_5.app  DIGITAL_IO_6.app  DIGITAL_IO_7.app  DIGITAL_IO_8.app  DIGITAL_IO_9.app
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/: ETH_LWIP.manifest  ETH_LWIP_0.app  ETH_LWIP_GUI.manifest
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Templates/: cch.tmpl  eth_lwip_confc.tmpl  eth_lwip_confh.tmpl  eth_lwip_externh.tmpl  ethernetifc.tmpl  lwipoptsh.tmpl  sys_archc.tmpl  sys_archh.tmpl
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Templates/lwip/api/: netbuf.c  netifapi.c  sockets.c
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Templates/lwip/core/: def.c  dhcp.c  init.c  mem.c  tcp.c  tcp_in.c  tcp_out.c  udp.c
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Templates/lwip/core/ipv4/: icmp.c  ip.c  ip_frag.c
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Templates/lwip/core/snmp/: msg_in.c  msg_out.c
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Templates/lwip/include/lwip/: api_msg.h  arch.h  def.h  dns.h  mem.h  netbuf.h  netdb.h  netif.h  netifapi.h  opt.h  raw.h  snmp_msg.h  snmp_structs.h  stats.h  sys.h  tcp_impl.h  tcpip.h
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Templates/lwip/include/netif/: ppp_oe.h  slipif.h
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/Uimodel/: ETH_LWIP.sd  ETH_LWIP_0.ui
ethernet/src/email/Dave/Model/APPS/ETH_LWIP/v4_0_10/doc/: index.chm
ethernet/src/email/Dave/Model/APPS/SYSTIMER/v4_1_14/: SYSTIMER.manifest  SYSTIMER_0.app  SYSTIMER_GUI.manifest
ethernet/src/email/Dave/Model/APPS/SYSTIMER/v4_1_14/Templates/: systimer_confc.tmpl  systimer_confh.tmpl  systimer_externh.tmpl
ethernet/src/email/Dave/Model/APPS/SYSTIMER/v4_1_14/Uimodel/: SYSTIMER.sd  SYSTIMER_0.ui
ethernet/src/email/Dave/Model/APPS/SYSTIMER/v4_1_14/doc/: index.chm
ethernet/src/email/Dave/Model/HW_RESOURCES/DEBUG/: DEBUG_0.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/DEVICEPACKAGE/: DEVICEPACKAGE_0.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/SCU/: SCU_0.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/cpu/: cpu_0.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/eth0/: eth0_0.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/port0/: port0_0.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/port1/: port1_1.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/port15/: port15_15.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/port2/: port2_2.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/port3/: port3_3.dd
ethernet/src/email/Dave/Model/HW_RESOURCES/port5/: port5_5.dd
ethernet/src/email/Libraries/XMCLib/src/: xmc_eth_mac.c
ethernet/src/email/htdocs/: LED1  LED2  MAILADR  getData.php  index.php  pushData.php
ethernet/src/email/htdocs/css/: styles.css
ethernet/src/email/htdocs/js/: base.js
ethernet/webserver/: HTTP_Server_Access.c  HTTP_Server_CGI.c  Web.c  main.c
ethernet/webserver/RTE/: RTE_Components.h
ethernet/webserver/RTE/CMSIS/: RTX_Conf_CM.c
ethernet/webserver/RTE/Device/XMC4500-F100x1024/: RTE_Device.h  startup_XMC4500.s
ethernet/webserver/RTE/File_System/: FS_Config_MC_0.h
ethernet/webserver/RTE/Network/: Net_Config.c  Net_Config_ETH_0.h  Net_Config_HTTP_Server.h
ethernet/webserver/Web/: Web.c  index.htm
usb/: main.c  (+2 more)
webserver/: Makefile.am  README  xmc_eth_phy_ksz8031rnl.c
webserver/src/: Readme.txt  linker_script.ld  main.c
webserver/src/Libraries/CMSIS/Infineon/XMC4500_series/Include/: XMC4500.h
webserver/src/Libraries/Newlib/: syscalls.c
webserver/src/Libraries/XMCLib/inc/: xmc4_ccu4_map.h  xmc4_ccu8_map.h  xmc4_eru_map.h  xmc4_flash.h  xmc4_gpio.h  xmc4_gpio_map.h  xmc4_rtc.h  xmc4_scu.h  xmc4_usic_map.h  xmc_can.h  xmc_can_map.h  xmc_ccu4.h  xmc_ccu8.h  xmc_common.h  xmc_dac.h  xmc_device.h  xmc_dma.h  xmc_dma.h~  xmc_dma_map.h  xmc_dsd.h  xmc_ebu.h  xmc_ecat.h  xmc_ecat_map.h  xmc_eru.h  xmc_eth_mac.h  xmc_eth_mac_map.h  xmc_eth_phy.h  xmc_fce.h  xmc_flash.h  xmc_gpio.h  xmc_hrpwm.h  xmc_hrpwm_map.h  xmc_i2c.h  xmc_i2s.h  xmc_ledts.h  xmc_posif.h  xmc_rtc.h  xmc_scu.h  xmc_sdmmc.h  xmc_spi.h  (+7 more)
webserver/src/Libraries/XMCLib/src/: xmc4_eru.c  xmc4_flash.c  xmc4_gpio.c  xmc4_rtc.c  xmc4_scu.c  xmc_can.c  xmc_ccu4.c  xmc_ccu8.c  xmc_common.c  xmc_dac.c  xmc_dma.c  xmc_dsd.c  xmc_ebu.c  xmc_ecat.c  xmc_eru.c  xmc_eth_mac.c  xmc_fce.c  xmc_gpio.c  xmc_hrpwm.c  xmc_i2c.c  xmc_i2s.c  xmc_ledts.c  xmc_posif.c  xmc_rtc.c  xmc_sdmmc.c  xmc_spi.c  xmc_uart.c  xmc_usbd.c  xmc_usic.c  xmc_vadc.c  xmc_wdt.c
webserver/src/Libraries/cmsis_rtos_rtx/: RTX_Conf_CM.c
webserver/src/Libraries/cmsis_rtos_rtx/INC/: RTX_CM_lib.h
webserver/src/Libraries/cmsis_rtos_rtx/SRC/: rt_CMSIS.c
webserver/src/Libraries/lwip/api/: api_lib.c  tcpip.c
webserver/src/Libraries/lwip/core/: memp.c
webserver/src/Libraries/lwip/port/cmsis-rtos/: sys_arch.c
webserver/src/Libraries/lwip/port/cmsis-rtos/include/: lwipopts.h
webserver/src/Libraries/lwip/port/cmsis-rtos/include/arch/: cc.h  sys_arch.h
webserver/src/Libraries/lwip/port/cmsis-rtos/netif/: ethernetif.c
webserver/src/Startup/: startup_XMC4500.S  system_XMC4500.c
webserver/src/httpserver/: httpserver-netconn.c
webserver/test/: Makefile.am  test.c
(+74 files in other folders)
